Fixed wrapping issue in footer. Added div element in Footer.jsx

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -4,25 +4,15 @@
   padding: 0;
 }
 
-footer.site-footer {
+footer .site-footer {
   width: 100%;
-  padding: 40px 20px 20px;
-  box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-  background-color: #f9f9fb;
 }
 
-.sponsor-logos {
+footer .footer-components {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
-  max-width: 280px;
-  margin: 0 auto;
+  gap: 100px;
 }
 
 .Logo {
